# PBD

./: CMakeLists.txt  README.md
inc/: cloth.h  mesh.h  sphere.h
shader/: 1.colors.fs  1.colors.vs  colors.vs
src/: main.cpp
